[gd_scene load_steps=9 format=2]

[ext_resource path="res://classes/Npc.gd" type="Script" id=1]
[ext_resource path="res://npcs/gen_npc_01.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/buttons.png" type="Texture" id=3]
[ext_resource path="res://gui/message_box.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 35, 25 )

[sub_resource type="Animation" id=2]

resource_name = "Appear"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("talk_indicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "Disappear"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("talk_indicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.54675, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("talk_indicator:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 4 ),
"transitions": PoolRealArray( 0.879002, 0.486575, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -82 ), Vector2( 0, -90 ), Vector2( 0, -82 ), Vector2( 0, -36 ) ]
}

[node name="npc_01" type="Node2D" index="0"]

script = ExtResource( 1 )
text_id = 3

[node name="sprite" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 1, -8 )

[node name="talk_area" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="collision" type="CollisionShape2D" parent="talk_area" index="0"]

shape = SubResource( 1 )

[node name="talk_indicator" type="Sprite" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -82 )
texture = ExtResource( 3 )
hframes = 4
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="anim_player" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Appear = SubResource( 2 )
anims/Disappear = SubResource( 3 )
anims/indicator = SubResource( 4 )
blend_times = [  ]

[node name="message_box" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 11, -24 )

[node name="timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false


